namespace-inheritance/compiled/analytics/networkpolicy_allow-gamestore-ingress.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# creates namespace named "hello"
# [START anthos_config_management_namespace_inheritance_compiled_analytics_network_policy_allow_gamestore_ingress] 
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configmanagement.gke.io/cluster-name: defaultcluster
    configmanagement.gke.io/source-path: config/namespaces/eng/network-policy-allow-gamestore-ingress.yaml
    configsync.gke.io/declared-fields: '{"f:spec":{"f:ingress":{},"f:podSelector":{"f:matchLabels":{"f:app":{}}}}}'
  labels:
    configsync.gke.io/declared-version: v1
  name: allow-gamestore-ingress
  namespace: analytics
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: gamestore
# [END anthos_config_management_namespace_inheritance_compiled_analytics_network_policy_allow_gamestore_ingress]
